--- a/config/database.yml
+++ b/config/database.yml
@@ -4,8 +4,9 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem "sqlite3"
 #
-default: &default # adapter: sqlite3
-  adapter: postgresql
+default: &default
+  adapter: sqlite3
+  # adapter: postgresql
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
@@ -20,6 +21,6 @@ test:
   <<: *default
   database: db/test.sqlite3
 
-production:
-  <<: *default
-  url: <%= ENV['DATABASE_URL'] %>
+# production:
+#   <<: *default
+#   url: <%= ENV['DATABASE_URL'] %>
